// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`persisted state snapshot > posts store shape 1`] = `
{
  "test_https://lemmy.world_https://blorpblorp.xyz/post/123": {
    "data": {
      "altText": null,
      "apId": "https://blorpblorp.xyz/post/123",
      "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
      "commentsCount": 4,
      "communityApId": "https://blorpblorp.xyz/c/0",
      "communityHandle": "0@blorpblorp.xyz",
      "createdAt": "2023-12-31T23:00:00.000000+00:00",
      "creatorApId": "https://blorpblorp.xyz/u/0",
      "creatorHandle": "0@blorpblorp.xyz",
      "creatorId": 0,
      "crossPosts": [],
      "deleted": false,
      "downvotes": 2,
      "embedVideoUrl": null,
      "emojiReactions": [],
      "featuredCommunity": false,
      "featuredLocal": false,
      "flairs": [],
      "id": 123,
      "isBannedFromCommunity": false,
      "locked": false,
      "nsfw": false,
      "read": false,
      "removed": false,
      "saved": false,
      "thumbnailAspectRatio": null,
      "thumbnailUrl": null,
      "title": "This is a test post",
      "upvotes": 10,
      "url": null,
      "urlContentType": null,
    },
    "lastUsed": 1704067200000,
  },
}
`;

exports[`persisted state snapshot > posts store shape 2`] = `
{
  "posts": {
    "test_https://lemmy.world_https://blorpblorp.xyz/post/123": {
      "data": {
        "altText": null,
        "apId": "https://blorpblorp.xyz/post/123",
        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

",
        "commentsCount": 4,
        "communityApId": "https://blorpblorp.xyz/c/0",
        "communityHandle": "0@blorpblorp.xyz",
        "createdAt": "2023-12-31T23:00:00.000000+00:00",
        "creatorApId": "https://blorpblorp.xyz/u/0",
        "creatorHandle": "0@blorpblorp.xyz",
        "creatorId": 0,
        "crossPosts": [],
        "deleted": false,
        "downvotes": 2,
        "embedVideoUrl": null,
        "emojiReactions": [],
        "featuredCommunity": false,
        "featuredLocal": false,
        "flairs": [],
        "id": 123,
        "isBannedFromCommunity": false,
        "locked": false,
        "nsfw": false,
        "read": false,
        "removed": false,
        "saved": false,
        "thumbnailAspectRatio": null,
        "thumbnailUrl": null,
        "title": "This is a test post",
        "upvotes": 10,
        "url": null,
        "urlContentType": null,
      },
      "lastUsed": 1704067200000,
    },
  },
}
`;
